Pom, usuarios y permisos